[project]
name = "space-determination"
version = "0.1.0"
description = "Orbit Propagation & Prediction Tool"
requires-python = ">=3.9"

[tool.ruff]
line-length = 88
extend-select = ["I", "B", "C4", "UP"]
fix = true
format = "ruff"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"