[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-determination"
version = "1.0.0"
description = "Orbit Propagation & Prediction Tool"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Jackson Crocker, David Herrera, Ariyan Sajid"}
]
keywords = ["orbital-mechanics", "satellite", "TLE", "orbit-propagation", "aerospace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
space-determination = "main:main"

[project.urls]
Repository = "https://github.com/ari-sajid/Space-Determination"

[tool.setuptools]
py-modules = [
    "main",
    "constants",
    "orbital_elements",
    "kepler_solver",
    "coordinate_systems",
    "propagator",
    "input_parser",
    "output_generator",
    "data_fetcher",
    "utils",
    "visualization",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = [
    "tests/*",
    "examples/*",
    "visualization.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
extend-select = ["I", "B", "C4", "UP"]
fix = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
strict = false